src/objects/NeraDefaultValue__c.object
<CustomObject>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>reference__c</fullName>
        <label>reference</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NeraDefaultValue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ndv-{0000000000}</displayFormat>
        <label>NeraDefaultValue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NeraDefaultValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>